<?xml version="1.0" encoding="utf-8"?>
<!--
    WolframCA - an android application to view 1-dimensional cellular automata (CA)
    Copyright 2013 Barry O'Neill (http://meep.nologin.net/)

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<resources>
    <string name="app_name">WolframCA</string>

    <string name="actionbar_ruleSummary">Rule %1$s</string>
    <string name="actionbar_but_changerule">Change Rule</string>
    <string name="actionbar_but_changezoom">Change Zoom</string>
    <string name="actionbar_but_backtotop">Back to Top</string>
    <string name="actionbar_but_settings">Settings</string>

    <string name="ruledialog_title">Select Rule</string>
    <string name="ruledialog_ruleSummary">Rule %1$s</string>
    <string name="ruledialog_ruleSliderStartVal">0</string>
    <string name="ruledialog_ruleSliderEndVal">255</string>
    <string name="ruledialog_rulePrev">Previous Rule</string>
    <string name="ruledialog_ruleNext">Next Rule</string>

    <string name="zoomdialog_title">Select Zoom</string>
    <string name="zoomdialog_zoomSummary">%1$spx per Cell</string>
    <string name="zoomDialog_zoomSliderStartVal">1px/cell (slower)</string>
    <string name="zoomDialog_zoomSliderEndVal">16px/cell (faster)</string>
    <string name="ruledialog_zoomPrev">Smaller Zoom</string>
    <string name="ruledialog_zoomNext">Larger Zoom</string>

    <string name="settings_category_general">General Settings</string>
    <string name="settings_category_about">Miscellaneous</string>

    <string name="setting_showdebug_title">Render debug information such as gridlines, state information (slower)</string>
    <string name="setting_showdebug_summaryon">Debug information will be shown (Can impact performance severely on some devices)</string>
    <string name="setting_showdebug_summaryoff">Debug information will not be shown</string>
    <string name="setting_githubpage_title">WolframCA on GitHub</string>
    <string name="setting_githubpage_summary">Go to the WolframCA project page on GitHub</string>
    <string name="setting_githubpage_url">http://github.com/barryoneill/WolframCA</string>
    <string name="setting_about_title">About WolframCA</string>


    <string name="aboutdialog_apptitle">WolframCA</string>
    <string name="aboutdialog_versionfmt">Version: %1$s</string>
    <string name="aboutdialog_author">Author: Barry O\'Neill</string>
    <string name="aboutdialog_disclaimer">This software comes with no warranty either expressed or implied. I am not
        responsible for any damages that may result from the use of this software, including but not limited to:
        monetary loss, data loss, emotional and mental distress, loss of use, bed wetting, premature hair loss or
        spontaneous combustion.</string>


</resources>
