<?xml version="1.0" encoding="UTF-8"?>

<!--
            'About' Dialog
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical"
              android:padding="10dip">

    <TextView
            android:drawableLeft="@drawable/launcher"
            android:drawablePadding="15dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="34sp"
            android:textStyle="bold"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/aboutdialog_apptitle"/>

    <View
            android:id="@+id/disclaimer_separator"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_margin="5dp"
            android:background="#aaaaaa"/>


    <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <!-- 'Version ${version} - ${year}' -->
            <TextView
                    android:id="@+id/about_version"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/aboutdialog_versionfmt"/>

            <TextView
                    android:id="@+id/about_author"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/aboutdialog_author"
                    />

            <!-- 'you install it, you accept responsibilty, etc' -->
            <TextView
                    android:id="@+id/about_legal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textSize="12sp"
                    android:textStyle="italic"
                    android:padding="2dp"
                    android:text="@string/aboutdialog_disclaimer"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>