<?xml version="1.0" encoding="utf-8"?>

<!--
Dialog layout for 'Change Zoom'
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="20dp">

    <!-- zoom buttons and summary -->
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

        <ImageButton
                android:id="@+id/zoomDialog_butZoomPrev"
                android:src="@drawable/ic_action_arrow_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/ruledialog_zoomPrev"
                />

        <TextView
                android:id="@+id/zoomDialog_zoomSummaryTxt"
                android:layout_width="wrap_content"
                android:minWidth="140dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                />

        <ImageButton
                android:id="@+id/zoomDialog_butZoomNext"
                android:src="@drawable/ic_action_arrow_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/ruledialog_zoomNext"
                />

    </LinearLayout>




    <!-- zoom slider -->
    <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">


        <SeekBar
                android:id="@+id/zoomDialog_zoomSlider"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:layout_alignParentTop="true"/>


        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zoomDialog_zoomSliderStartVal"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/zoomDialog_zoomSlider"
                android:textAppearance="?android:attr/textAppearanceSmall"
                />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zoomDialog_zoomSliderEndVal"
                android:layout_alignParentRight="true"
                android:layout_below="@id/zoomDialog_zoomSlider"
                android:textAppearance="?android:attr/textAppearanceSmall"
                />

    </RelativeLayout>


</LinearLayout>